fixed icon alignment

--- a/src/components/Posts/Post.css
+++ b/src/components/Posts/Post.css
@@ -1,4 +1,3 @@
-/* src/components/Posts/Post.css */
 .detailed-post-container {
 	display: flex;
 	flex-direction: column;
@@ -13,7 +12,7 @@
 	cursor: pointer;
 	transition: background-color 0.3s;
 	margin-bottom: 1em;
-
+	position: relative; /* Ensure absolute positioning works within this container */
 }
 
 .detailed-post-container:hover {
@@ -24,24 +23,22 @@
 
 .detailed-post-container .post-preview {
 	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
+	flex-direction: column;
+	justify-content: flex-end; /* Ensure content goes to the bottom */
+	flex: 1;
 }
 
 .detailed-post-container .post-image {
 	width: 100%;
 	min-height: 200px;
 	max-height: 200px;
-    object-fit:scale-down;
+	object-fit: scale-down;
 }
 
 .detailed-post-container .post-title {
 	font-size: 20px;
-	/* only need right and left margins , top and bottom are set to 0 */
 	margin: 0 0 0.5em 0;
 	overflow-wrap: break-word;
-
 }
 
 .detailed-post-container .title-date-container {
@@ -56,7 +53,7 @@
 .detailed-post-container .post-date {
 	color: #888;
 	font-size: 14px;
-	margin: 0; /* Remove top margin */
+	margin: 0;
 	align-self: flex-start;
 }
 
@@ -67,6 +64,7 @@
 	overflow-wrap: break-word;
 	text-align: right;
 	margin-right: 10px;
+	flex: 1; /* Allow description to take up remaining space */
 }
 
 .detailed-post-container .post-button {
@@ -76,11 +74,10 @@
 	border-radius: 5px;
 	background: #a04598;
 	color: #fff;
-	padding: 0.5em 1em;
 	font-size: 11px;
 	max-width: 40%;
 	margin-top: auto;
-	flex-direction: flex-end;
+	align-self: flex-end;
 }
 
 .detailed-post-container .post-button:hover {
@@ -94,16 +91,13 @@
 	cursor: pointer;
 	border-radius: 5px;
 	font-size: 14px;
-	margin: 0.5em 0;
 	text-align: center;
 	max-width: 20%;
 	transition: background-color 0.3s;
 	overflow: hidden;
 	display: inline-block;
-	margin-right: 10px;
 	align-self: flex-end;
-	/*place at bottom of container: */
-	margin-top: auto;
+	margin-top: 1em; /* Ensure some space between description and PDF button */
 }
 
 .detailed-post-container .post-pdf-button img {
